--- a/style.css
+++ b/style.css
@@ -16,10 +16,11 @@
 	width: 100%;
 	padding: 30px 0;
 	font-family: 'Ubuntu', sans-serif;
+	transition: all 0.3s ease;
 }
 .navbar.sticky{
 	background: skyblue;
-	padding: 30px 0;
+	padding: 15px 0;
 }
 .navbar .max-width{
 	display: flex;
@@ -30,10 +31,13 @@
 	color: white;
 	font-size: 35px;
 	font-weight: 500;
-}
+} 
 .navbar .logo a span{
 	color: skyblue;
-
+	transition: all 0.3s ease;
+}
+.navbar.sticky .logo a span{
+	color: white;
 }
 .navbar .menu li{
 	list-style: none;
@@ -48,6 +52,9 @@
 }
 .navbar .menu li a:hover{
 	color: skyblue;
+}
+.navbar.sticky .menu li a:hover{
+	color: white;
 }
 /*--home--inicio*/
 .home{
@@ -77,9 +84,100 @@
 	color: skyblue;
 	font-weight: 500;
 }
+.home .home-content a{
+	display: inline-block;
+	background: skyblue;
+	color: white;
+	font-size: 25px;
+	padding: 12px 36px;
+	margin-top: 20px;
+	border-radius: 6px;
+	border: 2px solid skyblue;
+}
+.home .home-content a:hover{
+	color: skyblue;
+	background: none;
+}
+/*--Menu Mobile--*/
 
+.menu-btn{
+	color: white;
+	font-size: 26px;
+	cursor: pointer;
+	display: none;
+}
 
-
+/*--Responsivo--*/
+@media (max-width: 1104px){
+	.navbar .max-width{
+		margin-left: 0;
+	}
+}
+@media (max-width: 991px){
+	.navbar .max-width{
+		padding: 0 50px;
+	}
+}
+@media (max-width: 947px){
+	.max-width{
+		padding: 0 50px;
+	}
+	.menu-btn{
+		display: block;
+		z-index: 999;
+	}
+	.navbar .menu{
+		position: fixed;
+		width: 100%;
+		height: 100vh;
+		left: -100%;
+		top: 0;
+		background: black;
+		padding-top: 80px;
+		text-align: center;
+		transition: all 0.3s ease;
+	}
+	.navbar .menu.active{
+		left: 0;
+	}
+	.navbar .menu li{
+		display: block;
+	}
+	.navbar .menu li a{
+		display: inline-block;
+		margin: 20px 0;
+		font-size: 25px;
+	}
+	.home .home-content .text-2{
+		font-size: 70px;
+	}
+	.home .home-content .text-3{
+		font-size: 35px;
+	}
+	.home .home-content a{
+		font-size: 23px;
+		padding: 10px 30px;
+	}
+}
+@media (max-width: 690px){
+	.home .home-content .text-2{
+		font-size: 60px;
+	}
+	.home .home-content .text-3{
+		font-size: 32px;
+	}
+	.home .home-content a{
+		font-size: 20px;
+	}
+}
+@media (max-width: 500px){
+	.home .home-content .text-2{
+		font-size: 50px;
+	}
+	.home .home-content .text-3{
+		font-size: 32px;
+	}
+}
 
 
 
