--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@
 .navbar{
 	position: fixed;
 	width: 100%;
+	z-index: 999;
 	padding: 30px 0;
 	font-family: 'Ubuntu', sans-serif;
 	transition: all 0.3s ease;
@@ -98,8 +99,8 @@
 	color: skyblue;
 	background: none;
 }
-/*--Menu Mobile--*/
 
+/*--Menu Mobile--*/
 .menu-btn{
 	color: white;
 	font-size: 26px;
@@ -107,10 +108,143 @@
 	display: none;
 }
 
+/*--Todos os codigos similares--*/
+section{
+	padding: 100px 0;
+}
+section .title{
+	position: relative;
+	text-align: center;
+	font-size: 40px;
+	font-weight: 500;
+	margin-bottom: 60px;
+	padding-bottom: 20px;
+	font-family: 'Ubuntu', sans-serif;
+}
+section .title::before{
+	content: "";
+	position: absolute;
+	bottom: 0px;
+	left: 50%;
+	width: 180px;
+	height: 3px;
+	background: black;
+	transform: translateX(-50%);
+}
+section .title::after{
+	content: "";
+	position: absolute;
+	bottom: -10px;
+	left: 50%;
+	font-size: 20px;
+	background: white;
+	color: skyblue;
+	padding: 5px;
+	transform: translateX(-50%);
+}
+
+/*--Sessao sobre--*/
+.about, .services{
+	font-family: 'Roboto', sans-serif;
+}
+.about .about-content,
+.services .serv-content{
+	display: flex;
+	flex-wrap: wrap;
+	align-items: center;
+	justify-content: space-between;
+}
+.about .title::after{
+	content: "Quem sou eu";
+}
+.about .about-content .left{
+	width: 45%;
+}
+.about .about-content .right{
+	width: 55%;
+}
+.about .about-content .right .text{
+	font-size: 25px;
+	font-weight: 500;
+	margin-bottom: 10px;
+}
+.about .about-content .right .text span{
+	color: skyblue;
+}
+.about .about-content .right p{
+	text-align: justify;
+}
+.about .about-content .right a{
+	display: inline-block;
+	background: skyblue;
+	color: white;
+	font-size: 20px;
+	font-weight: 500;
+	padding: 10px 30px;
+	margin-top: 20px;
+	border-radius: 6px;
+	border: 2px solid skyblue;
+	transition: all 0.3s ease;
+}
+.about .about-content .right a:hover{
+	color: skyblue;
+	background: none;
+}
+.about .about-content .left img{
+	width: 400px;
+	height: 400px;
+	object-fit: cover;
+	border-radius: 6px;
+}
+
+/*--sessao servicos--*/
+.services{
+	background: black;
+	color: white;
+}
+.services .title::before{
+	background: white;
+}
+.services .title::after{
+	background: black;
+	content: "Meus conhecimentos";
+}
+.services .serv-content .card{
+	width: calc(33% - 20px);
+	background: skyblue;
+	text-align: center;
+	border-radius: 6px;
+	padding: 20px 25px;
+	cursor: pointer;
+}
+.services .serv-content .card .box{
+	transition: all 0.3s ease;
+}
+.services .serv-content .card:hover .box{
+	transform: scale(1.05);
+}
+
+.services .serv-content .card ion-icon{
+	font-size: 70px;
+	color: white;
+}
+.services .serv-content .card .text{
+	font-size: 25px;
+	font-weight: 500;
+	margin: 10px 0 7px 0;
+}
+
+
 /*--Responsivo--*/
-@media (max-width: 1104px){
+@media (max-width: 1300px){
 	.navbar .max-width{
 		margin-left: 0;
+	}
+}
+@media (max-width: 1104px){
+	.about .about-content .left img{
+		width: 350px;
+		height: 350px;
 	}
 }
 @media (max-width: 991px){
@@ -120,6 +254,7 @@
 }
 @media (max-width: 947px){
 	.max-width{
+		max-width: 800px;
 		padding: 0 50px;
 	}
 	.menu-btn{
@@ -158,6 +293,17 @@
 		font-size: 23px;
 		padding: 10px 30px;
 	}
+	.about .about-content .column{
+		width: 50%;
+	}
+	.about .about-content .left{
+		display: flex;
+		justify-content: center;
+		margin: 0 auto 60px;
+	}
+	.about .about-content .right{
+		flex: 100%;
+	}
 }
 @media (max-width: 690px){
 	.home .home-content .text-2{
@@ -178,21 +324,3 @@
 		font-size: 32px;
 	}
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
