--- a/style.css
+++ b/style.css
@@ -142,20 +142,22 @@ section .title::after{
 	padding: 5px;
 	transform: translateX(-50%);
 }
-
-/*--Sessao sobre--*/
-.about, .services{
+.about, .services, .skills{
 	font-family: 'Roboto', sans-serif;
 }
 .about .about-content,
-.services .serv-content{
+.services .serv-content,
+.skills .skills-content{
 	display: flex;
 	flex-wrap: wrap;
 	align-items: center;
 	justify-content: space-between;
 }
+
+/*--Sessao sobre--*/
+
 .about .title::after{
-	content: "Quem sou eu";
+	content: "";
 }
 .about .about-content .left{
 	width: 45%;
@@ -207,7 +209,6 @@ section .title::after{
 }
 .services .title::after{
 	background: black;
-	content: "Meus conhecimentos";
 }
 .services .serv-content .card{
 	width: calc(33% - 20px);
@@ -216,6 +217,12 @@ section .title::after{
 	border-radius: 6px;
 	padding: 20px 25px;
 	cursor: pointer;
+	transition: all 0.3s ease;
+	border: 2px solid skyblue;
+}
+.services .serv-content .card:hover{
+	color: skyblue;
+	background: none;
 }
 .services .serv-content .card .box{
 	transition: all 0.3s ease;
@@ -223,10 +230,12 @@ section .title::after{
 .services .serv-content .card:hover .box{
 	transform: scale(1.05);
 }
-
 .services .serv-content .card ion-icon{
 	font-size: 70px;
 	color: white;
+}
+.services .serv-content .card:hover ion-icon{
+	color: skyblue;
 }
 .services .serv-content .card .text{
 	font-size: 25px;
@@ -234,6 +243,16 @@ section .title::after{
 	margin: 10px 0 7px 0;
 }
 
+/*--Sessao conhecimento Skills--*/
+.skills .title:after{
+	content: "";
+}
+.skills .skills-content .column{
+	width: calc(50% - 30px);
+}
+.skills .skills-content .left .text{
+	
+}
 
 /*--Responsivo--*/
 @media (max-width: 1300px){
@@ -304,6 +323,10 @@ section .title::after{
 	.about .about-content .right{
 		flex: 100%;
 	}
+	.services .serv-content .card{
+		width: calc(50% - 10px);
+		margin-bottom: 20px;
+	}
 }
 @media (max-width: 690px){
 	.home .home-content .text-2{
@@ -314,6 +337,9 @@ section .title::after{
 	}
 	.home .home-content a{
 		font-size: 20px;
+	}
+	.services .serv-content .card{
+	width: 100%;
 	}
 }
 @media (max-width: 500px){
