--- a/style.css
+++ b/style.css
@@ -142,12 +142,13 @@ section .title::after{
 	padding: 5px;
 	transform: translateX(-50%);
 }
-.about, .services, .skills{
+.about, .services, .skills, .teams{
 	font-family: 'Roboto', sans-serif;
 }
 .about .about-content,
 .services .serv-content,
-.skills .skills-content{
+.skills .skills-content,
+.teams .teams-content{
 	display: flex;
 	flex-wrap: wrap;
 	align-items: center;
@@ -200,14 +201,16 @@ section .title::after{
 }
 
 /*--sessao servicos--*/
-.services{
+.services, .teams{
 	background: black;
 	color: white;
 }
-.services .title::before{
+.services .title::before,
+.teams .title: :before{
 	background: white;
 }
-.services .title::after{
+.services .title::after,
+.teams .title::after{
 	background: black;
 }
 .services .serv-content .card{
@@ -251,7 +254,97 @@ section .title::after{
 	width: calc(50% - 30px);
 }
 .skills .skills-content .left .text{
-	
+	font-size: 25px;
+	font-weight: 500;
+	margin-bottom: 10px;
+}
+.skills .skills-content .left p{
+	text-align: justify;
+	padding: 5px;
+}
+.skills .skills-content .left a{
+	display: inline-block;
+	background: skyblue;
+	color: white;
+	font-size: 20px;
+	font-weight: 500;
+	padding: 8px 16px;
+	margin-top: 20px;
+	border-radius: 6px;
+	border: 2px solid skyblue;
+	transition: all 0.3s ease;
+}
+.skills .skills-content .left a:hover{
+	color: skyblue;
+	background: none;
+}
+
+.skills .skills-content .right .bars{
+	margin-bottom: 15px;
+}
+.skills .skills-content .right .info{
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+}
+.skills .skills-content .right span{
+	font-weight: 500;
+	font-size: 18px;
+}
+.skills .skills-content .right .line{
+	width: 100%;
+	height: 5px;
+	background: grey;
+	position: relative;
+}
+.skills .skills-content .right .line::before{
+	content: "";
+	position: absolute;
+	height: 100%;
+	top: 0;
+	left: 0;
+	background: skyblue;
+}
+.skills .skills-content .right .html::before{
+	width: 90%;
+}
+.skills .skills-content .right .css::before{
+	width: 60%;
+}
+.skills .skills-content .right .python::before{
+	width: 65%;
+}
+.skills .skills-content .right .c::before{
+	width: 50%;
+}
+
+/*--Sessao Equipe/Projetos--*/
+.teams .title::after{
+	content: "";
+}
+.teams .carousel .card{
+	background: skyblue;
+	border-radius: 6px;
+	padding: 25px 35px;
+	text-align: center;
+}
+.teams .carousel .card img{
+	width: 150px;
+	height: 150px;
+	object-fit: cover;
+	border-radius: 20%;
+	border: 5px solid black;
+}
+.teams .carousel .card .box{
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	justify-content: center;
+}
+.teams .carousel .card .text{
+	font-size: 25px;
+	font-weight: 500;
+	margin: 10px 0 7px 0;
 }
 
 /*--Responsivo--*/
@@ -326,6 +419,10 @@ section .title::after{
 	.services .serv-content .card{
 		width: calc(50% - 10px);
 		margin-bottom: 20px;
+	}
+	.skills .skills-content .column{
+		width: 100%;
+		margin-bottom: 35px;
 	}
 }
 @media (max-width: 690px){
